# 2023-autumn-ab-python-hw-13-ilystsov

./: .coveragerc  .env_template  Makefile  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docker/app/: Dockerfile
docker/tests/: Dockerfile
src/: api_handlers.py  app.py  db.py  handlers.py
src/templates/: create_task.html  create_task_list.html  edit_task.html  edit_task_list.html  login.html  register.html  task_lists.html  tasks.html
tests/: test_api_handlers.py  test_handlers.py
